--- a/html1.html
+++ b/html1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<h3>my new heading</h3>
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 <p>my second para</p>
